Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@i915_selftest@live - fail - GEM_BUG_ON(!list_empty(&pool->cache_list[n]))
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8515/shard-iclb6/igt@i915_selftest@live.html
<0> [306.417801] i915_sel-5398 0.... 295771696us : intel_gt_fini_buffer_pool: intel_gt_fini_buffer_pool:227 GEM_BUG_ON(!list_empty(&pool->cache_list[n]))
<0> [306.417834] ---------------------------------
<4> [306.417956] clocksource: timekeeping watchdog on CPU0: Marking clocksource 'tsc' as unstable because the skew is too large:
<4> [306.417967] clocksource: 'acpi_pm' wd_now: e4d3fb wd_last: b02456 mask: ffffff
<4> [306.417969] clocksource: 'tsc' cs_now: 5acba378e0 cs_last: 57ee159568 mask: ffffffffffffffff
<6> [306.418125] tsc: Marking TSC unstable due to clocksource watchdog
<4> [306.419083] TSC found unstable after boot, most likely due to broken BIOS. Use 'tsc=unstable'.
<6> [306.419092] sched_clock: Marking unstable (291479161045, 14939913752)<-(306509334085, -90258969)
<4> [306.419320] ------------[ cut here ]------------
<2> [306.419323] kernel BUG at drivers/gpu/drm/i915/gt/intel_gt_buffer_pool.c:227!
<4> [306.419349] invalid opcode: 0000 [#1] PREEMPT SMP NOPTI
<4> [306.419356] CPU: 4 PID: 5398 Comm: i915_selftest Tainted: G W 5.7.0-rc6-CI-CI_DRM_8515+ #1
<4> [306.419365] Hardware name: Intel Corporation Ice Lake Client Platform/IceLake U DDR4 SODIMM PD RVP TLC, BIOS ICLSFWR1.R00.3234.A01.1906141750 06/14/2019
<4> [306.419413] RIP: 0010:intel_gt_fini_buffer_pool+0xb2/0xc0 [i915]
<4> [306.419422] Code: 00 48 c7 c2 60 5e 7a a0 48 c7 c7 e4 e7 60 a0 e8 a4 9d b9 e0 bf 01 00 00 00 e8 ba 6f b9 e0 31 f6 bf 09 00 00 00 e8 ae 49 aa e0 <0f> 0b 66 2e 0f 1f 84 00 00 00 00 00 66 90 0f b6 97 36 0d 00 00 80
<4> [306.419438] RSP: 0018:ffffc900003ebda8 EFLAGS: 00010297
<4> [306.419444] RAX: 0000000000000046 RBX: ffff88847960bfa8 RCX: 0000000000000000
<4> [306.419452] RDX: ffff888458a04040 RSI: 0000000000000000 RDI: 0000000000000009
<4> [306.419459] RBP: ffff88847960bc78 R08: 0000000000000000 R09: 0000000000000000
<4> [306.419466] R10: 0000000000000000 R11: 0000000000000000 R12: ffffc900003ebe18
<4> [306.419473] R13: ffff88849b7f9568 R14: ffff8884712dec40 R15: ffff88849b7f9568
<4> [306.419481] FS: 00007f6f38f88300(0000) GS:ffff8884a0000000(0000) knlGS:0000000000000000
<4> [306.419489] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [306.419496] CR2: 00005604d7d94d80 CR3: 000000045476a006 CR4: 0000000000760ee0
<4> [306.419504] PKRU: 55555554
<4> [306.419509] Call Trace:
<4> [306.419569] i915_gem_driver_release+0x16/0xf0 [i915]
<4> [306.419608] i915_driver_release+0x27/0x80 [i915]
<4> [306.419618] drm_dev_put.part.13+0x2b/0x60
<4> [306.419625] release_nodes+0x15f/0x290
<4> [306.419633] device_release_driver_internal+0xf0/0x1c0
<4> [306.419640] driver_detach+0x42/0x90
<4> [306.419645] bus_remove_driver+0x56/0xd0
<4> [306.419652] pci_unregister_driver+0x25/0xa0
<4> [306.419710] i915_exit+0x1b/0x21 [i915]
<4> [306.419719] __x64_sys_delete_module+0x115/0x1e0
<4> [306.419749] ? trace_hardirqs_off_thunk+0x1a/0x1c
<4> [306.419757] ? do_syscall_64+0xd/0x220
<4> [306.419764] do_syscall_64+0x4f/0x220
<4> [306.419773] entry_SYSCALL_64_after_hwframe+0x49/0xb3
<4> [306.419781] RIP: 0033:0x7f6f3862b1b7
<4> [306.419787] Code: 73 01 c3 48 8b 0d d1 8c 2c 00 f7 d8 64 89 01 48 83 c8 ff c3 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 44 00 00 b8 b0 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d a1 8c 2c 00 f7 d8 64 89 01 48
<4> [306.419805] RSP: 002b:00007ffe79fc1618 EFLAGS: 00000206 ORIG_RAX: 00000000000000b0
<4> [306.419814] RAX: ffffffffffffffda RBX: 00007ffe79fc1710 RCX: 00007f6f3862b1b7
<4> [306.419821] RDX: 0000000000000000 RSI: 0000000000000800 RDI: 000055772587ec68
<4> [306.419829] RBP: 000055772587ec00 R08: 00007ffe79fc0614 R09: 00007ffe79fc1640
<4> [306.419836] R10: 00007ffe79fc0614 R11: 0000000000000206 R12: 0000000000000000
<4> [306.419844] R13: 00007ffe79fc1d80 R14: 0000000000000000 R15: 0000000000000000
<4> [306.419854] Modules linked in: vgem snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic i915(-) mei_hdcp x86_pkg_temp_thermal coretemp snd_intel_dspcfg crct10dif_pclmul crc32_pclmul snd_hda_codec snd_hwdep snd_hda_core cdc_ether ghash_clmulni_intel usbnet mii snd_pcm e1000e ptp pps_core mei_me mei intel_lpss_pci prime_numbers [last unloaded: snd_hda_intel]
<4> [306.419909] ---[ end trace b7b10f723a59e7c6 ]---